fix alignment issue with headers

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -563,10 +563,12 @@ a[target="_blank"]::after {
     */
 }
 
-.data-essay-page>p,ul,ol,h3,h4,h5,h6 {
-    max-width: 750px;
-    margin-left: auto;
-    margin-right: auto;
+.data-essay-page {
+    p,ul,ol,h3,h4,h5,h6 {
+        max-width: 750px;
+        margin-left: auto;
+        margin-right: auto;
+}
     /*
     p, a, h2, h3, h4, h5, h6, blockquote, .footnotes, .by-line {
         max-width: 750px;
